# uenc-contract

./: .gitignore  CMakeLists.txt  README.md  entry.cpp  gen_version_info.sh  make_depend.sh  utils.cmake
ca/: Crypto_ECDSA.cpp  Crypto_ECDSA.h  ca.cpp  ca.h  ca_AdvancedMenu.cpp  ca_AdvancedMenu.h  ca_AwardAlgorithm.cpp  ca_AwardAlgorithm.h  ca_CCalAbnormalAwardList.cpp  ca_CCalAbnormalAwardList.h  ca_CCalBlockAward.h  ca_CCalBlockCount.h  ca_MultipleApi.cpp  ca_MultipleApi.h  ca_algorithm.cpp  ca_algorithm.h  ca_base64.cpp  ca_black_list_cache.cpp  ca_black_list_cache.h  ca_block_http_callback.cpp  ca_block_http_callback.h  ca_blockcache.cpp  ca_blockcache.h  ca_blockcompare.h  ca_blockpool.cpp  ca_blockpool.h  ca_global.cpp  ca_global.h  ca_header.h  ca_http_api.cpp  ca_http_api.h  ca_interface.cpp  ca_interface.h  ca_jcAPI.cpp  ca_message.cpp  ca_phoneAPI.cpp  ca_phoneAPI.h  ca_pledgecache.cpp  ca_pledgecache.h  ca_pwdattackchecker.cpp  (+20 more)
common/: config.cpp  config.h  devicepwd.cpp  global.cpp  global_data.cpp  global_data.h  setting_wizard.cpp  setting_wizard.h  time_report.cpp  version.cpp  version.h
db/: cache.cpp  cache.h  db_api.cpp  db_api.h  rocksdb.cpp  rocksdb.h  rocksdb_read.h  rocksdb_read_write.cpp  rocksdb_read_write.h
doc/: Protobuf接口文档.md  UENC技术说明.md  UENC节点运行.md  jsonrpc接口文档.md  uenc_v1.6.5版本.mpp  交易相关错误返回值_v2.0.0.xlsx  交易过程新版 .md  区块同步和区块回滚逻辑.md
doc/img/: 区块结构.vsdx  网络拓扑图.vsdx
doc/wiki/: intro.md
doc/wiki/UENC节点/: 使用节点.md
doc/wiki/UENC节点/节点部署/: CentOS部署.md  Docker部署UENC.md  Ubuntu部署.md  搭建UENC节点集群.md  硬件条件.md
doc/wiki/smart-contract/: 合约测试jsonrpc.md  智能合约-工作交接.md  智能合约jsonrpc接口.md  智能合约入门.md  智能合约功能.txt  智能合约模块源码说明.md
doc/wiki/smart-contract/contract_examples/: alloc_mem.wasm  call.abi  call.wasm  database.abi  database.wasm  database_limit.abi  database_limit.wasm  hello.abi  hello.wasm  index.abi  index.wasm  print_per_second.abi  print_per_second.wasm  recursion_call.abi  recursion_call.wasm  return_value.abi  return_value.wasm  table_opt.abi  table_opt.wasm  token.abi  token.wasm
doc/wiki/开发者/: UENC开发者.md
doc/wiki/开发者/开放接口/: JSON RPC API.md  Protobuf API.md  调用静态库.md
doc/wiki/开发者/模块/: 交易流程.md  区块同步.md  网络结构.md
doc/wiki/架构/: 交易规则.md  共识算法.md  性能指标.md  数据同步.md  智能合约.md  经济模型.md  网络.md  质押和奖励.md  链形态.md  验证节点.md
doc/wiki/社区讨论/: 常见问题.md  搭建节点流程.md
doc/wiki/钱包/: Fastoken钱包.md
doc/wiki/集成/: RPC 交易流程.md  添加UENC到您的交易所.md
include/: logging.cpp  logging.h  net_interface.h
main/: main.cpp  main.h
net/: define.h.rej  dispatcher.cpp  epoll_mode.cpp  global.cpp  global.h  handle_event.cpp  ip_port.cpp  msg_queue.h  net_api.cpp  net_api.h  net_interface.cpp  node_cache.cpp  node_cache.h  pack.cpp  pack.h  peer_node.cpp  peer_node.h  peer_node.h.rej  socket_buf.cpp  socket_buf.h  work_thread.cpp
proto/: ca_protomsg.pb.cc  ca_protomsg.pb.h  common.pb.cc  common.pb.h  interface.pb.cc  interface.pb.h  net.pb.cc  net.pb.h  sync_block.pb.cc  sync_block.pb.h  transaction.pb.cc  transaction.pb.h
proto/src/: ca_protomsg.proto  common.proto  interface.proto  net.proto  sync_block.proto  transaction.proto
tests/: test_rocksdb.cpp
utils/: string_util.cpp  time_util.cpp  time_util.h  util.cpp
utils/json/: json_spirit_writer_template.h
version_update/: version_client.cpp
vm/wasm/: abi_def.hpp  abi_serializer.cpp  abi_serializer.hpp  contract_tools.cpp  contract_tools.hpp  datastream.hpp  wasm_constants.hpp  wasm_context.cpp  wasm_context.hpp  wasm_context_interface.hpp  wasm_interface.cpp  wasm_interface.hpp  wasm_runtime.cpp  wasm_runtime.hpp  wasm_variant.hpp
vm/wasm/eos-vm/: CMakeLists.txt
vm/wasm/eos-vm/include/eosio/vm/: backend.hpp  base_visitor.hpp  constants.hpp  exceptions.hpp  execution_context.hpp  host_function.hpp  interpret_visitor.hpp  opcodes.hpp  opcodes_def.hpp  parser.hpp  types.hpp
vm/wasm/eos-vm/tools/: CMakeLists.txt  hello_driver.cpp  interp.cpp
vm/wasm/exception/: log_message.hpp
vm/wasm/types/: name.hpp  regid.hpp  types.hpp
